fix(inspector): allow vertical overflow in applet
 - Contain inspector within viewport boundaries.
 - Enable scrolling of applet view when content overflows.
 - Ensure the "View as" bottom bar remains visible

--- a/inspector/web/components/app-root.css
+++ b/inspector/web/components/app-root.css
@@ -1,6 +1,6 @@
 app-root {
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
 }
@@ -8,5 +8,5 @@ app-root {
 app-root main {
   flex-grow: 1;
   display: flex;
-  height: 100%;
+  overflow: hidden;
 }
