--- a/inspector/web/components/app-sidebar.css
+++ b/inspector/web/components/app-sidebar.css
@@ -2,13 +2,11 @@ app-sidebar {
   width: 400px;
   border-right: 1px solid var(--color-border);
   padding: 13px;
-  height: 100%;
   flex-shrink: 0;
 }
 
 app-sidebar form {
   width: 100%;
-  height: 100%;
   display: flex;
   gap: 15px;
   flex-direction: column;
